[package]
name = "polkadot-service"
version = "0.7.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.1.29"
futures03 = { package = "futures", version = "0.3.1", features = ["compat"] }
exit-future = "0.1.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
primitives = { package = "sp-core", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client = { package = "sc-client", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client-api = { package = "sc-client-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client-db = { package = "sc-client-db", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sc-executor = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sc-network = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
consensus_common = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
inherents = { package = "sp-inherents", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
service = { package = "sc-service", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
telemetry = { package = "sc-telemetry", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sc-keystore = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
pallet-babe = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
pallet-staking = { git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
im-online = { package = "pallet-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
babe = { package = "sc-consensus-babe", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "child_uuid_step1" }
