[package]
name = "polkadot-service"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
primitives = { package = "sp-core", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
client = { package = "sc-client", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
client-api = { package = "sc-client-api", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
client-db = { package = "sc-client-db", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sc-executor = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sc-network = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
consensus_common = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
inherents = { package = "sp-inherents", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
service = { package = "sc-service", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
telemetry = { package = "sc-telemetry", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sc-keystore = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
pallet-babe = { git = "https://github.com/cheme/substrate", default-features = false, branch = "updatable_traverse" }
pallet-staking = { git = "https://github.com/cheme/substrate", default-features = false, branch = "updatable_traverse" }
im-online = { package = "pallet-im-online", git = "https://github.com/cheme/substrate", default-features = false, branch = "updatable_traverse" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
babe = { package = "sc-consensus-babe", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/cheme/substrate", default-features = false, branch = "updatable_traverse" }

[features]
default = ["rocksdb"]
rocksdb = ["service/rocksdb"]
