[package]
name = "polkadot-statement-table"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
