[package]
name = "polkadot-validation"
version = "0.7.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1.17"
futures03 = { package = "futures", version = "0.3.1", features = ["compat"] }
futures-timer = "2.0"
async-std = { version = "1.0.1", features = ["unstable"] }
parking_lot = "0.9.0"
tokio = "0.1.22"
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.1.4"
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
inherents = { package = "substrate-inherents", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
consensus = { package = "substrate-consensus-common", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
primitives = { package = "substrate-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
client = { package = "substrate-client-api", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sr-api = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
sp-timestamp = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
block-builder = { package = "substrate-block-builder", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
trie = { package = "substrate-trie", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
keystore = { package = "substrate-keystore", git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }

[dev-dependencies]
substrate-keyring = { git = "https://github.com/cheme/substrate", branch = "child_uuid_step1" }
