[package]
name = "polkadot-validation"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.4", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
polkadot-runtime = { path = "../runtime" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
inherents = { package = "sp-inherents", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
consensus = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
primitives = { package = "sp-core", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
client = { package = "sc-client-api", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sp-api = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
sp-timestamp = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
block-builder = { package = "sc-block-builder", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
trie = { package = "sp-trie", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
keystore = { package = "sc-keystore", git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/cheme/substrate", branch = "updatable_traverse" }
