[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
av_store = { package = "polkadot-availability-store", path = "../../availability-store" }
consensus = { package = "polkadot-validation", path = "../../validation" }
polkadot-network = { path = "../../network" }
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
babe = { package = "sc-consensus-babe", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
consensus_common = { package = "sp-consensus", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
frame-benchmarking = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
frame-system = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
inherents = { package = "sp-inherents", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
pallet-staking = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
pallet-transaction-payment = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-chain-spec = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-executor = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-informant = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-network = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-transaction-pool = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
service = { package = "sc-service", git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend", default-features = false }
sp-arithmetic = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-keyring = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-state-machine = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
substrate-test-client = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend", default-features = false }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
