[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
futures = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.3.4" }

# Polkadot dependencies
polkadot-primitives = { path = "../../../primitives" }
polkadot-runtime-common = { path = "../../common" }
polkadot-test-runtime = { path = ".." }
polkadot-test-service = { path = "../../../node/test-service" }

# Substrate dependencies
pallet-timestamp = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-block-builder = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-client-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-light = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-service = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend", features = ["test-helpers"],  default-features = false }
sp-api = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
substrate-test-client = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
